--- a/index.html
+++ b/index.html
@@ -29,24 +29,19 @@
             </div>
             <!-- 카드 생상 고르기 -->
             <ul class="colors">
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li value="0"></li>
+                <li value="1"></li>
+                <li value="2"></li>
+                <li value="3"></li>
+                <li value="4"></li>
+                <li value="5"></li>
             </ul>
-            
         </div>
 
-        <div class="todolist-board">
-            <ul class="todoList">
-                등록된 데이터가 없습니다.
-            </ul>
-        </div>
+        <ul class="todoList"></ul>
 
         <footer class="footer">
-            <span>오늘은 할일이 <span class="pendingNumb"></span> 남았습니다!!!</span>    
+            <span>오늘은 할일이 남았습니다!!!</span>    
             <button>모두삭제</button>
         </footer>
 
